--- a/src/LoanNaja.Core/LoanNaja.Core.csproj
+++ b/src/LoanNaja.Core/LoanNaja.Core.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" Version="4.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="4.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.2" />
   </ItemGroup>
 
 </Project>
