--- a/test/LoanNaja.IntegrationTest/LoanNaja.IntegrationTest.csproj
+++ b/test/LoanNaja.IntegrationTest/LoanNaja.IntegrationTest.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentAssertions.Web" Version="1.1.14" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
